force-app/main/default/objects/Programa__c/fields/N_0_Escuela_Tecnica__c.field-meta.xml
<CustomField>
    <fullName>N_0_Escuela_Tecnica__c</fullName>
    <inlineHelpText>Texto sobre Actividades del Programa</inlineHelpText>
    <label>N°0 Escuela Tecnica</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>