force-app/main/default/objects/Programa__c/fields/N_1_Escuela_Tecnica_Orientada__c.field-meta.xml
<CustomField>
    <fullName>N_1_Escuela_Tecnica_Orientada__c</fullName>
    <inlineHelpText>Texto de Actividades del Programa</inlineHelpText>
    <label>N°1 Escuela Tecnica/Orientada</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>