force-app/main/default/objects/Programa__c/fields/N_2_Escuela_Tecnica__c.field-meta.xml
<CustomField>
    <fullName>N_2_Escuela_Tecnica__c</fullName>
    <label>N°2 Escuela Tecnica</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>