force-app/main/default/objects/Programa__c/recordTypes/Pr_ctivas_Educativas.recordType-meta.xml
<RecordType>
    <fullName>Pr_ctivas_Educativas</fullName>
    <active>true</active>
    <label>Programa Educativo</label>
</RecordType>